# Ruwa

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  ASSET_POLICY.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  RELEASE.md  REUSE.toml  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  app.rc  resources.qrc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
LICENSES/: LicenseRef-Ruwa-MyPFP.txt
cmake/: RuwaBuildConfig.h.in  RuwaUpdateTrust.cmake  StaticAnalysis.cmake
docs/: SECURE_UPDATES.md
plugins/: CMakeLists.txt
plugins/standard/blur/: CMakeLists.txt
plugins/standard/blur/src/: BlurCommon.c  BlurCommon.h  BlurEffects.h  BlurPlugin.c
plugins/standard/blur/src/effects/: BoxBlur.c  GaussianBlur.c  MotionBlur.c  RadialBlur.c  Sharpen.c  UnsharpMask.c
plugins/standard/color/: CMakeLists.txt
plugins/standard/color/src/: ColorCommon.c  ColorCommon.h  ColorEffects.h  ColorPlugin.c
plugins/standard/color/src/effects/: ColorAdjust.c
plugins/standard/distort/: CMakeLists.txt
plugins/standard/distort/src/: DistortCommon.c  DistortCommon.h  DistortEffects.h  DistortPlugin.c
plugins/standard/distort/src/effects/: Pinch.c  Ripple.c  Twirl.c  Wave.c
plugins/standard/stylize/: CMakeLists.txt
plugins/standard/stylize/src/: StylizeCommon.c  StylizeCommon.h  StylizeEffects.h  StylizePlugin.c
plugins/standard/stylize/src/effects/: Glow.c  GradientOverlay.c  Halftone.c  LayerStyles.c  Stroke.c
plugins/standard/texture/: CMakeLists.txt
plugins/standard/texture/src/: TextureCommon.c  TextureCommon.h  TextureEffects.h  TexturePlugin.c
plugins/standard/texture/src/effects/: NoiseGrain.c
resources/Layouts/: Base.json
resources/brushes/StandardBrushes/: Classic Brushes.rbf  Experimental Brushes.rbf  Lineart Brushes.rbf  Wet Brushes.rbf
resources/pigments/: ruwa-pigments-v1.lut
resources/updates/: ApplyUpdate.ps1
scripts/: New-RuwaUpdatePackage.ps1  New-RuwaUpdateSigningKey.ps1  StaticAnalysisCommon.ps1  manage-license-headers.ps1  pigment_bincount_test.py  pigment_gen_glsl.py  pigment_mix_prototype.py  pigment_reservoir_sim.py  run-clang-tidy.ps1  run-clazy.ps1
sdk/: README.md
sdk/reference/: CMakeLists.txt  README.md
sdk/reference/src/: reference_tint.c
src/app/: Application.cpp  Application.h  TabletToMouseEventFilter.cpp  TabletToMouseEventFilter.h  main.cpp
src/commands/: Command.cpp  Command.h  CommandContext.cpp  CommandContext.h  CommandExecutor.cpp  CommandExecutor.h  CommandRegistry.cpp  CommandRegistry.h  Commands.h  ShortcutManager.cpp  ShortcutManager.h
src/commands/definitions/: CommandDefinitions.h  EditCommands.cpp  EditCommands.h  FileCommands.cpp  FileCommands.h  LayerCommands.cpp  LayerCommands.h  NavigationCommands.cpp  NavigationCommands.h  TabCommands.cpp  TabCommands.h  ToolCommands.cpp  ToolCommands.h  ViewCommands.cpp  ViewCommands.h
src/features/canvas/: CanvasBoundsMode.h
src/features/canvas-resize/: CanvasResizeCommand.cpp  CanvasResizeCommand.h  CanvasResizeController.cpp  CanvasResizeController.h
src/features/color/: ColorChannelSlidersWidget.cpp  ColorChannelSlidersWidget.h  ColorPanel.cpp  ColorPanel.h  ColorPicker.cpp  ColorPicker.h  ColorPickerOverlay.cpp  ColorPickerOverlay.h  ColorSlotSwitchWidget.cpp  ColorSlotSwitchWidget.h  RecentColorsPersistence.cpp  RecentColorsPersistence.h
src/features/effects/: EffectCoverageResolver.cpp  EffectCoverageResolver.h  GLLayerEffectRenderRegistry.cpp  GLLayerEffectRenderRegistry.h  GLLayerEffectRenderer.cpp  GLLayerEffectRenderer.h  LayerEffectRegistry.cpp  LayerEffectRegistry.h  LayerEffectTypes.h
src/features/export/: ExportAreaController.cpp  ExportAreaController.h  ExportModeController.cpp  ExportModeController.h  ExportSettingsPanel.cpp  ExportSettingsPanel.h
src/features/fill/: FillProgressivePolicy.cpp  FillProgressivePolicy.h  FillRawTileOps.cpp  FillRawTileOps.h  FillTypes.h  FloodFill.cpp  FloodFill.h  GLFillRenderer.cpp  GLFillRenderer.h
src/features/first-run-integration/: FirstRunIntegrationBackgroundWidget.cpp  FirstRunIntegrationBackgroundWidget.h  FirstRunIntegrationWidget.cpp  FirstRunIntegrationWidget.h
src/features/home/: HomePageContent.cpp  HomePageContent.h  HomePageSidebar.cpp  HomePageSidebar.h  HomePageTab.cpp  HomePageTab.h  SidebarButton.cpp  SidebarButton.h
src/features/project/: ProjectData.h  ProjectSerializer.cpp  ProjectSerializer.h  RecentProjectsManager.cpp  RecentProjectsManager.h  ThumbnailCache.cpp  ThumbnailCache.h
src/features/selection/: GLSelectionRenderer.cpp  GLSelectionRenderer.h  LassoSelectionManager.cpp  LassoSelectionManager.h  README.md  SelectionActionPopup.cpp  SelectionActionPopup.h
src/features/settings/: AppSettings.h  BaseSettingsWidget.cpp  BaseSettingsWidget.h  ChoiceButton.cpp  ChoiceButton.h  SettingsCategory.cpp  SettingsCategory.h  SettingsChoice.cpp  SettingsChoice.h  SettingsComboBox.cpp  SettingsComboBox.h  SettingsContent.cpp  SettingsContent.h  SettingsManager.cpp  SettingsManager.h  SettingsToggle.cpp  SettingsToggle.h  ShortcutsNavigatorWidget.cpp  ShortcutsNavigatorWidget.h  UpdatesActionButton.cpp  UpdatesActionButton.h  UpdatesSettingsWidget.cpp  UpdatesSettingsWidget.h
src/features/startup/: StartupAnimationController.cpp  StartupAnimationController.h  StartupController.cpp  StartupController.h  StartupSequence.h
src/platform/: LinuxPlatform.cpp  LinuxPlatform.h  Platform.cpp  Platform.h  WindowsPlatform.cpp  WindowsPlatform.h
src/shared/tiles/: TileBrush.h  (+6 more)
tests/: CMakeLists.txt  dab_shape_falloff_test.cpp  flood_fill_alpha_lock_test.cpp  pigment_lut_test.cpp  pigment_model_test.cpp  project_serializer_test.cpp  smoke_test.cpp  update_manifest_test.cpp  update_security_test.cpp  update_semantic_version_test.cpp  wet_pigment_glsl_test.cpp  wet_pigment_gpu_layout_test.cpp
tools/pigment-lut-generator/: main.cpp
translations/: commands_ru.json  ruwa_en.ts  ruwa_ru.ts
(+631 files in other folders)
